--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+  <meta name="color-scheme" content="light dark">
+</head>
+  <body>
+    <pre style="word-wrap: break-word; white-space: pre-wrap;">
 #09062023 
 192.243.48.0/20 
 185.177.92.0/22 
@@ -10,3 +16,6 @@
 
 #TEST 
 84.238.193.121 
+    </pre>
+  </body>
+</html>
